--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>API spec of Vani</title>
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
-    <p>This is a simple example of a GitHub Pages website.</p>
+    <p>Thế giới của Long!!!</p>
 </body>
 </html>
