--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ distributes.</p>
 <table>
 <tr>
 <td class="icon">
-<div class="title">Tip</div>
+  <img src="https://cdn-icons-png.flaticon.com/512/3771/3771294.png" alt="Warning Icon" width="550" height="50">
 </td>
 <td class="content">
 The <code><strong>base URL</strong></code> provided by vani System is defined in this documentation. 3rd Party Membership should provide <code><strong>base URL</strong></code> information to vani.
@@ -839,7 +839,7 @@ registration and use.
 <table>
 <tr>
 <td class="icon">
-<div class="title">Warning</div>
+  <img src="https://static.vecteezy.com/system/resources/previews/012/042/292/original/warning-sign-icon-transparent-background-free-png.png" alt="Warning Icon" width="50" height="50">
 </td>
 <td class="content">
 Merchant’s Membership System must store the vani Barcode delivered by the vani System.<br>
