--- a/CodeSample/demo.html
+++ b/CodeSample/demo.html
@@ -442,7 +442,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="header">
 <h1>Lucas&#8217;s Blog</h1>
 <div class="details">
-<span id="author" class="author">Lucas - ngoclong.tran@vanilacorp.com - Version 1.0.0, 2023-07-01</span><br>
+<span id="author" class="author">Demo - ngoclong.tran@vanilacorp.com - Version 1.0.0, 2023-07-01</span><br>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
