--- a/home.html
+++ b/home.html
@@ -436,6 +436,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 #footer-text{color:rgba(0,0,0,.6);font-size:.9em}}
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
@@ -459,8 +460,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 14.2857%;">
-<col style="width: 71.4285%;">
-<col style="width: 14.2858%;">
+<col style="width: 57.1428%;">
+<col style="width: 28.5715%;">
 </colgroup>
 <thead>
 <tr>
@@ -486,7 +487,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <table>
 <tr>
 <td class="icon">
-<div class="title">Tip</div>
+<i class="fa icon-tip" title="Tip"></i>
 </td>
 <td class="content">
 If have any question, you can contact email <a href="mailto:ngoclong.tran@vanilacorp.com">ngoclong.tran@vanilacorp.com</a>
@@ -497,21 +498,25 @@ If have any question, you can contact email <a href="mailto:ngoclong.tran@vanila
 </div>
 </div>
 <div class="sect1">
-<h2 id="_vanila_api_spec"><a href="ApiSpec/index.html">2. Vanila API Spec</a</h2>
+<h2 id="_vanila_api_spec">2. Vanila API Spec</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>For more detail, please click <a href="ApiSpec/index.html">HERE</a></p>
+</div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_code_sample"><a href="CodeSample/demo.html">3. Code Sample</a></h2>
+<h2 id="_code_sample">3. Code Sample</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>For more detail, please click <a href="CodeSample/demo.html">HERE</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-07-20 15:22:45 +0700
+Last updated 2023-07-20 16:10:40 +0700
 </div>
 </div>
 </body>
